--- a/podcastrnext/src/components/Player/styles.module.scss
+++ b/podcastrnext/src/components/Player/styles.module.scss
@@ -18,14 +18,14 @@
   }
 
   strong {
-    font-family: Lexend, sans-serif;
+    font-family: Lexand, sans-serif;
     font-weight: 600;
   }
 
   footer {
     align-self: stretch;
 
-    &.empty {
+    &.empty .progress {
       opacity: 0.5;
     }
   }
@@ -53,17 +53,12 @@
   }
 }
 
-
 .emptyPlayer {
   width: 100%;
   height: 20rem;
   border: 1.5px dashed var(--purple-300);
   border-radius: 1.5rem;
-  background: linear-gradient(
-    143.8deg,
-    rgba(145, 100, 250, 0.8) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
+  background: linear-gradient(143.8deg, rgba(145, 100, 250, 0.8) 0%, rgba(0,0,0,0) 100%);
 
   padding: 4rem;
   text-align: center;
@@ -76,7 +71,7 @@
 .progress {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
   font-size: 0.875rem;
 
   span {
@@ -108,9 +103,23 @@
     background: transparent;
     border: 0;
     font-size: 0;
-
+    transition: filter 0.2s;
+    
     &:disabled {
       cursor: default;
+      opacity: 0.5;
+    }
+
+    &:hover:not(:disabled) {
+      filter: brightness(0.7)
+    }
+
+    &.isActive {
+      filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg)
+    }
+
+    &.isActive:hover {
+      filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
     }
 
     &.playButton {
@@ -118,9 +127,10 @@
       height: 4rem;
       border-radius: 1rem;
       background: var(--purple-400);
+      transition: filter 0.2s;
 
       &:hover {
-        filter: brightness(0.95);
+        filter: brightness(0.95)
       }
     }
   }
